<resources>
    <string name="app_name">A.U.Almaty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>
    <string name="profile_form">Анкета</string>
    <string name="profile_reviews">Мои отзывы</string>
    <string name="profile_orders">Мои заказы</string>
    <string name="profile_edit">Редактировать</string>
    <string name="menu_delete_all">Delete all</string>


    <string-array name="sections">
        <item>Все разделы</item>
        <item>Авто услуги</item>
        <item>Бытовые услуги</item>
        <item>Дизайн, фотосъемка и перевод</item>
        <item>Доставка и грузоперевозки</item>
        <item>Животные</item>
        <item>Ит и реклама</item>
        <item>Красота и здоровье</item>
        <item>Недвижимость и финансы</item>
        <item>Помощь с учебой</item>
        <item>Ремонт, сервис и стройка</item>
        <item>Уборка</item>
        <item>Прочее</item>
    </string-array>

    <string name="powered_by">Powered by Bayan &amp; Samsung</string>

    <string name="first_slide_title">Ищите необходимых специалистов</string>
    <string name="second_slide_title">Проявите себя в своей специальности</string>

    <string name="first_slide_desc">Вы можете искать подходящие заказы и нужных специалистов в соответстующих разделах</string>
    <string name="second_slide_desc">Вы можете разместить свои услуги и контакты</string>


    <string name="btn_start">Начать</string>
    <string name="search_txt">Поиск...</string>
    <string name="btn_add_coverphoto">Добавить фото ообложки</string>
    <string name="btn_save">Сохранить</string>
    <string name="btn_add_service">Добавить услугу</string>
    <string name="btn_cancel">Отменить</string>
    <string name="btn_delete_form">Удалить анкету</string>
    <string name="hint_yourasnwer">Ваш ответ</string>
    <string name="btn_security">Безопасность</string>
    <string name="btn_set_passwd">Изменить пароль</string>
    <string name="hint_number">Номер</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
