<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_edit_number">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_numb_inputlayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          android:layout_centerInParent="true"
            android:layout_marginTop="50sp"
            android:hint="@string/hint_number"
            android:textColorHint="@color/colorMutedText">

            <com.santalu.maskedittext.MaskEditText
                android:id="@+id/edit_numb_etnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                app:met_mask="+7(###) ### ## ##" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/edit_numb_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="4sp"
            android:layout_marginEnd="5sp"
            android:layout_marginBottom="40sp"
            android:background="@color/colorMutedGray2"
            android:enabled="true"
            android:ems="6"
            android:padding="10dp"
            android:text="@string/btn_save"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <Button
            android:id="@+id/edit_numb_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5sp"
            android:ems="6"
            android:layout_marginTop="25sp"
            android:layout_marginBottom="40sp"
            android:background="@color/colorMutedGray2"
            android:enabled="true"
            android:padding="10dp"
            android:text="@string/btn_cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </RelativeLayout>
</FrameLayout>