<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.AppCompat.DayNight.DarkActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="fragments.MyProfileActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="120sp"
                android:layout_height="140sp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="40sp"
                android:layout_marginStart="30sp"
                android:src="@drawable/executors_default_image" />

            <TextView
                android:id="@+id/profile_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/profile_image"
                android:layout_marginStart="40sp"
                android:layout_marginTop="65sp"
                android:textColor="@color/colorMutedText"
                android:textStyle="bold"
                android:text="Имя:" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/profile_name_txt"
                android:layout_marginStart="4sp"
                android:layout_marginTop="65sp"
                android:textColor="@color/colorMutedGray2"
                android:textStyle="bold"
                android:text="name" />

           <!-- <TextView
                android:id="@+id/profile_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/profile_image"
                android:layout_marginStart="40sp"
                android:layout_below="@id/profile_name"
                android:layout_marginTop="15sp"
                android:text="status" />-->

            <TextView
                android:id="@+id/profile_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/profile_image"
                android:layout_marginStart="40sp"
                android:layout_marginTop="15sp"
                android:layout_below="@id/profile_name"
                android:text="rating" />

            <Button
                android:id="@+id/profile_orders"
                android:layout_width="336dp"
                android:layout_height="48dp"
                android:layout_marginTop="60sp"
                android:layout_marginStart="37dp"
                android:layout_marginEnd="38dp"
                android:layout_below="@id/profile_registDate"
                android:text="@string/profile_orders"
                android:enabled="true"
                android:textColor="@color/colorWhite"
                android:background="@color/colorMutedGray2"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAllCaps="false"
                />

            <Button
                android:id="@+id/profile_form"
                android:layout_width="336dp"
                android:layout_height="48dp"
                android:layout_marginStart="37dp"
                android:layout_marginEnd="38dp"
                android:layout_marginTop="20sp"
                android:layout_below="@id/profile_orders"
                android:text="@string/profile_form"
                android:enabled="true"
                android:textColor="@color/colorWhite"
                android:background="@color/colorMutedGray2"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAllCaps="false"
                />

            <Button
                android:id="@+id/profile_reviews"
                android:layout_width="336dp"
                android:layout_height="48dp"
                android:layout_marginStart="37dp"
                android:layout_marginEnd="38dp"
                android:text="@string/profile_reviews"
                android:layout_marginTop="20sp"
                android:enabled="true"
                android:textColor="@color/colorWhite"
                android:background="@color/colorMutedGray2"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_below="@id/profile_form" />

            <TextView
                android:id="@+id/profile_registDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/profile_image"
                android:layout_marginStart="40sp"
                android:layout_marginTop="15sp"
                android:layout_below="@id/profile_rating"
                android:text="date"

                />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>